<resources>
    <string name="app_name">Fitness-App</string>
    <string name="car_rent" />
    <string name="expand_all" />
    <string name="select_level">Select Level</string>
    <string name="levels">LEVELS</string>
    <string name="expandall">ExpandAll ></string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="expert">Expert</string>
    <string name="beginner">Beginner</string>
    <string name="chest">Chest</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="view"><![CDATA[View >]]></string>
    <string name="workout_1">Workout 1</string>
    <string name="workout_2">Workout 2</string>
    <string name="workout_3">Workout 3</string>
    <string name="biceps_workout">Biceps Workout</string>
    <string name="more_app_link">https://play.google.com/store/apps/</string>
    <string name="report_email_subject">Report Subject</string>
    <string name="report_email_body">Report Content:\n%s</string>
    <string name="no_email_app_message">No email app found</string>
    <string name="beg_bic_w1"> 1) Warm-up: Begin with a brief warm-up to increase blood flow to your muscles and prevent injuries.\nYou can do some light cardio, such as jogging or jumping jacks, for about 5 minutes.</string>
    <string name="beg_bic_w2"> 2) Standing Barbell or Dumbbell Curls: Stand with your feet shoulder–width apart, and hold a barbell or dumbbells with an underhand grip (palms facing upward).\nCurl the weight up towards your shoulders while keeping your elbows close to your body.\nSlowly lower the weight back down. Aim for 3 sets of 10–12 repetitions.</string>
    <string name="beg_bic_w3"> 3) Hammer Curls: Similar to standing curls, but this time, hold the dumbbells with a neutral grip (palms facing each other).\nCurl the weights up towards your shoulders, and then lower them back down.\nPerform 3 sets of 10–12 repetitions.</string>
    <string name="beg_bic_w4"> 4) Concentration Curls: Sit on a bench with your legs spread apart.\nHold a dumbbell in one hand and place the back of your upper arm against your inner thigh.\nCurl the weight upward, focusing on contracting your biceps.\nLower it back down.\nDo 3 sets of 10–12 repetitions per arm.</string>
    <string name="beg_bic_w5"> 5) Rest: Take a short rest (about 1–2 minutes) between each set to allow your muscles to recover.</string>
    <string name="beg_bic_w6"> 6) Cool Down: After completing the exercises, do some gentle stretching for your biceps and other major muscle groups involved in the workout.</string>
    <string name="beg_chest_w1">1) Push-ups: 3 sets of 8-10 reps
\n->Start with your hands slightly wider than shoulder-width apart.
\n->Lower your body until your chest almost touches the ground.
\n->Push back up to the starting position.</string>
    <string name="beg_chest_w2">2) Dumbbell Bench Press: 3 sets of 8-10 reps
\n->Lie flat on a bench with a dumbbell in each hand, palms facing forward.
\n->Lower the dumbbells to the sides of your chest, keeping your elbows at 90 degrees.
\n->Push the dumbbells back up to the starting position.</string>
    <string name="beg_chest_w3">3) Dumbbell Flyes: 3 sets of 10-12 reps
\n->Lie flat on a bench with a dumbbell in each hand, palms facing each other.
\n->Lower the dumbbells out to your sides in a wide arc, feeling a stretch in your chest.
\n->Bring the dumbbells back up, squeezing your chest muscles.</string>
    <string name="beg_chest_w4">4) Incline Push-ups: 3 sets of 8-10 reps
\n->Find an elevated surface (e.g., a bench or sturdy chair) and place your hands on it.
\n->Position yourself at an incline angle and perform push-ups.
\n->Lower your body and push back up.</string>
    <string name="beg_chest_w5">5) Chest Stretch: Hold for 20-30 seconds
\n->Stand tall and clasp your hands behind your back.
\n->Straighten your arms and lift them slightly, feeling a stretch in your chest.</string>
    <string name="beg_shoulder_w1">1) Shoulder Press (Dumbbell or Barbell): 3 sets of 8-10 reps
\n->Sit or stand with your back straight and core engaged.
\n->Hold a dumbbell in each hand at shoulder level or use a barbell resting on your shoulders.
\n->Press the weights upward until your arms are fully extended overhead.
\n->Lower the weights back down to shoulder level.</string>
    <string name="beg_shoulder_w2">2) Front Raises: 3 sets of 10-12 reps
\n->Stand with your feet shoulder-width apart, holding a dumbbell in each hand.
\n->Keeping your arms straight, raise the dumbbells to shoulder level, one at a time.
\n->Slowly lower the weights back to the starting position.</string>
    <string name="beg_shoulder_w3">3) Lateral Raises: 3 sets of 10-12 reps
\n->Stand with your feet shoulder-width apart, holding a dumbbell in each hand.
\n->Keeping a slight bend in your elbows, raise the dumbbells to the sides until they reach shoulder height.
\n->Lower the weights back down to your sides.</string>
    <string name="beg_shoulder_w4">4) Bent-Over Raises (Rear Deltoid Raises): 3 sets of 10-12 reps
\n->Bend forward at the hips, keeping your back flat and knees slightly bent.
\n->Hold a dumbbell in each hand, palms facing inwards towards your body.
\n->Raise the dumbbells out to the sides until your arms are parallel to the ground.
\n->Lower the weights back down with control.</string>
    <string name="beg_shoulder_w5">5) Arnold Press: 3 sets of 8-10 reps
\n->Start with dumbbells at shoulder height, palms facing your body.
\n->As you press the dumbbells upward, rotate your palms to face forward.
\n->At the top of the movement, your arms should be fully extended and palms facing away from you.
\n->Reverse the motion and bring the dumbbells back to the starting position, rotating your palms back to the initial position.</string>
    <string name="beg_shoulder_w6">6) Shoulder Stretch: Hold for 20-30 seconds on each arm
\n->Extend one arm across your chest.
\n->With your other hand, gently pull the extended arm closer to your body, feeling a stretch in your shoulder.</string>
    <string name="beg_tricep_w1">1) Tricep Dips (Assisted if needed): 3 sets of 8-10 reps
\n->Find parallel bars or use the edge of a sturdy chair/bench.
\n->Lower your body by bending your elbows until they reach a 90-degree angle.
\n->Push back up to the starting position.</string>
    <string name="beg_tricep_w2">2) Dumbbell Tricep Extensions (Skull Crushers): 3 sets of 10-12 reps
\n->Lie flat on a bench with a dumbbell in each hand, arms extended straight up.
\n->Bend your elbows to lower the dumbbells towards your forehead (carefully).
\n->Extend your arms back up to the starting position.
</string>
    <string name="diet_wg_wg1">1) Caloric Surplus: To gain weight, you need to consume more calories than your body burns.\nCalculate your daily caloric needs using an online calculator and aim to consume around 300-500 calories above that number.</string>
    <string name="diet_wg_wg2">2) Macronutrients Balance:
        \nProteins: They are essential for muscle repair and growth. Aim for about 1.2 to 1.5 grams of protein per pound of body weight. Good sources include chicken, turkey, lean beef, fish, eggs, dairy, legumes, and tofu.
        \nCarbohydrates: These provide energy for workouts and daily activities. Choose complex carbohydrates like whole grains, brown rice, quinoa, sweet potatoes, oats, and fruits.
        \nFats: Healthy fats are calorie-dense and beneficial for overall health. Incorporate sources like avocados, nuts, seeds, olive oil, and fatty fish.</string>
    <string name="diet_wg_wg3">3) Regular Meals and Snacks: Aim to eat 3 main meals and 2-3 snacks between them throughout the day.\nThis helps increase calorie intake.</string>
    <string name="diet_wg_wg4">4) Protein-rich Breakfast: Start your day with a protein-rich breakfast.\nIt could be eggs, Greek yogurt with nuts and fruits, or a protein smoothie.</string>
    <string name="diet_wg_wg5">5) Frequent Protein Snacks: Have protein-rich snacks such as nuts, Greek yogurt, cottage cheese, protein bars, or a protein shake between meals.</string>
    <string name="diet_wg_wg6">6) Healthy Fats: Include sources of healthy fats in your meals, like avocados, nuts, seeds, and olive oil.</string>
    <string name="diet_wg_wg7">7) Weight-Gaining Smoothies: Blend together fruits, Greek yogurt, milk, protein powder, and nut butter for a calorie-dense and nutritious smoothie.</string>
    <string name="diet_wg_wg8">8) Starchy Vegetables: Include starchy vegetables like sweet potatoes, peas, corn, and squash in your meals.</string>
    <string name="diet_wg_wg9">9) Strength Training: Combine your diet plan with a proper strength training routine to stimulate muscle growth.</string>
    <string name="diet_wg_wg10">10) Hydration: Stay hydrated throughout the day. Water is crucial for various bodily functions.</string>
    <string name="diet_wg_wg11">11) Avoid Empty Calories: While it\'s essential to increase calorie intake, avoid relying on sugary and processed foods with empty calories.\nFocus on nutrient-rich choices.</string>
    <string name="diet_wg_wg12">12) Rest and Recovery: Ensure you get enough sleep and rest to support muscle recovery and overall well-being.</string>
    <string name="diet_wl_wl1">1) Calculate Caloric Needs: Use an online calculator to estimate your daily caloric needs.\nThen, create a calorie deficit by consuming 300-500 calories less than your daily requirement.</string>
    <string name="diet_wl_wl2">2) Portion Control: Pay attention to portion sizes to avoid overeating. Use smaller plates and bowls to help with portion control.</string>
    <string name="diet_wl_wl3">3) Balanced Macronutrients:
\nProteins: Include lean protein sources like chicken, turkey, fish, tofu, beans, and legumes. Protein helps you feel full and preserves muscle mass during weight loss.
\nComplex Carbohydrates: Opt for whole grains, brown rice, quinoa, oats, fruits, and vegetables. These provide sustained energy and fiber, which aids digestion.
\nHealthy Fats: Incorporate sources like avocados, nuts, seeds, olive oil, and fatty fish. Healthy fats are essential for various bodily functions.</string>
    <string name="diet_wl_wl4">4) Vegetables and Fruits: Load up on non-starchy vegetables and fruits, which are low in calories and high in nutrients. \nThey also provide essential vitamins, minerals, and antioxidants.</string>
    <string name="diet_wl_wl5">5) Limit Added Sugars and Processed Foods: Minimize sugary beverages, candies, pastries, and processed snacks, as they are calorie-dense but nutrient-poor.</string>
    <string name="diet_wl_wl6">6) Regular Meals and Snacks: Don\'t skip meals and aim for 3 main meals and 1-2 healthy snacks per day. \nEating regularly helps maintain stable blood sugar levels and prevents overeating.</string>
    <string name="diet_wl_wl7">7) Hydration: Drink plenty of water throughout the day. \nSometimes, thirst can be mistaken for hunger.</string>
    <string name="diet_wl_wl8">8) Mindful Eating: Pay attention to your hunger and fullness cues. \nAvoid distractions while eating and savor your meals.</string>
    <string name="diet_wl_wl9">9) Limit Liquid Calories: Be cautious with high-calorie beverages like sodas, sugary juices, and alcoholic drinks.\nOpt for water, herbal teas, or flavored water with no added sugars.</string>
    <string name="diet_wl_wl10">10) Cook at Home: Preparing meals at home allows you to control ingredients and portion sizes better.</string>
    <string name="diet_wl_wl11">11) Stay Active: Regular physical activity is crucial for weight loss. \nIncorporate both cardiovascular exercises and strength training into your routine.</string>
    <string name="diet_wl_wl12">12) Monitor Progress: Keep track of your food intake and exercise to stay accountable and make adjustments as needed.</string>
</resources>