<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".weight_gain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Diet for Weight Gain"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/diet_wg1"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg1"
                android:layout_marginStart="16dp" />
            <TextView
                android:id="@+id/tv_diet_wg1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg2"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg3"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg4"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg5"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg5"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg5"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg6"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg6"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg6"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg7"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg7"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg8"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg8"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg8"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg9"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg9"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg9"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg10"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg10"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg10"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg11"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg11"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg11"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp" />

            <ImageView
                android:id="@+id/diet_wg12"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/diet_wg12"
                android:layout_marginTop="10dp" />
            <TextView
                android:id="@+id/tv_diet_wg12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/diet_wg_wg12"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>


    </RelativeLayout>

</ScrollView>